--- a/home.html
+++ b/home.html
@@ -39,6 +39,7 @@
                             <div class="swiper-slide"><img src="images/cocacola4.png"></div>
                             <div class="swiper-slide"><img src="images/cocacola5.png"></div>
                             <div class="swiper-slide"><img src="images/cocacola6.png"></div>
+                            <div class="swiper-slide"><img src="images/cocacola7.png"></div>
                         </div>
                     </div>
                 </div>
