--- a/home.html
+++ b/home.html
@@ -40,9 +40,9 @@
                             <div class="swiper-slide"><img src="images/cocacola5.png"></div>
                             <div class="swiper-slide"><img src="images/cocacola6.png"></div>
                             <div class="swiper-slide"><img src="images/cocacola7.png"></div>
-                            <div class="swiper-slide"><img src="images/cocacola8.png"></div>
+                            <!-- <div class="swiper-slide"><img src="images/cocacola8.png"></div>
                             <div class="swiper-slide"><img src="images/cocacola9.png"></div>
-                            <div class="swiper-slide"><img src="images/cocacola10.png"></div>
+                            <div class="swiper-slide"><img src="images/cocacola10.png"></div> -->
                         </div>
                     </div>
                 </div>
