--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
                 <a href="#"><img src="images/logo.png" class="logo"></a>
                 <ul class="navigation">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Menu</a></li>
+                    <li><a href="items.html">Menu</a></li>
                     <li><a href="#">What's New</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
