--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
             <header>
                 <a href="#"><img src="images/logo.png" class="logo"></a>
                 <ul class="navigation">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li><a href="items.html">Menu</a></li>
                     <li><a href="#">What's New</a></li>
                     <li><a href="#">Contact</a></li>
