--- a/items.html
+++ b/items.html
@@ -14,7 +14,7 @@
                 <ul class="navigation">
                     <li><a href="home.html">Home</a></li>
                     <li><a href="items.html">Menu</a></li>
-                    <li><a href="#">What's New</a></li>
+                    <li><a href="new.html">What's New</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
     </body>
