--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
         <section>
             <div class="circle"></div>
             <header>
-                <a href="#"><img src="images/logo.png" class="logo"></a>
+                <a href="home.html"><img src="images/logo.png" class="logo"></a>
                 <ul class="navigation">
                     <li><a href="home.html">Home</a></li>
                     <li><a href="items.html">Menu</a></li>
