Progress to local product

--- a/home.html
+++ b/home.html
@@ -11,10 +11,10 @@
         <section>
             <div class="circle"></div>
             <header>
-                <a href="home.html"><img src="images/logo.png" class="logo"></a>
+                <a href="home.html"><img src="images/logo1.png" class="logo"></a>
                 <ul class="navigation">
                     <li><a href="home.html">Home</a></li>
-                    <li><a href="items.html">Menu</a></li>
+                    <li><a href="items.html">Products</a></li>
                     <li><a href="new.html">What's New</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -23,9 +23,10 @@
                 <div class="textBox">
                     <h2>Taste the Feelings</h2>
                     <p>
-                        Experience the timeless refreshment of Coca-Cola. With its iconic taste and effervescent fizz, Coca-Cola brings moments of joy to every sip. 
-                        Whether you're sharing laughs with friends, unwinding after a long day, or simply craving a burst of flavor, Coca-Cola is the perfect companion for any occasion. 
-                        Embrace the feeling and savor the deliciousness of Coca-Cola today.
+                        Experience the timeless refreshment of Pran. 
+                        With its iconic taste and effervescent fizz, Pran brings moments of joy to every sip. 
+                        Whether you're sharing laughs with friends, unwinding after a long day, or simply craving a burst of flavor, Pran is the perfect companion for any occasion. 
+                        Embrace the feeling and savor the deliciousness of Pran today.
                     </p>
                     <a href="#">Learn More</a>
                 </div>
@@ -33,13 +34,13 @@
                 <div class="imgBox">
                     <div class="swiper-container">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide"><img src="images/cocacola1.png"></div>
-                            <div class="swiper-slide"><img src="images/cocacola2.png"></div>
-                            <div class="swiper-slide"><img src="images/cocacola3.png"></div>
-                            <div class="swiper-slide"><img src="images/cocacola4.png"></div>
-                            <div class="swiper-slide"><img src="images/cocacola5.png"></div>
-                            <div class="swiper-slide"><img src="images/cocacola6.png"></div>
-                            <div class="swiper-slide"><img src="images/cocacola7.png"></div>
+                            <div class="swiper-slide"><img src="images/pran1.png"></div>
+                            <div class="swiper-slide"><img src="images/pran2.png"></div>
+                            <div class="swiper-slide"><img src="images/pran3.png"></div>
+                            <div class="swiper-slide"><img src="images/pran4.png"></div>
+                            <div class="swiper-slide"><img src="images/pran5.png"></div>
+                            <div class="swiper-slide"><img src="images/pran6.png"></div>
+                            <div class="swiper-slide"><img src="images/pran7.png"></div>
                             <!-- <div class="swiper-slide"><img src="images/cocacola8.png"></div>
                             <div class="swiper-slide"><img src="images/cocacola9.png"></div>
                             <div class="swiper-slide"><img src="images/cocacola10.png"></div> -->
