Progress to local product

--- a/items.html
+++ b/items.html
@@ -10,10 +10,10 @@
         <section>
             <div class="circle"></div>
             <header>
-                <a href="home.html"><img src="images/logo.png" class="logo"></a>
+                <a href="home.html"><img src="images/logo1.png" class="logo"></a>
                 <ul class="navigation">
                     <li><a href="home.html">Home</a></li>
-                    <li><a href="items.html">Menu</a></li>
+                    <li><a href="items.html">Products</a></li>
                     <li><a href="new.html">What's New</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
