--- a/items.html
+++ b/items.html
@@ -17,5 +17,7 @@
                     <li><a href="new.html">What's New</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
+            </header>
+        </section>
     </body>
 </html>
