--- a/items.html
+++ b/items.html
@@ -18,6 +18,14 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </header>
+            <div class="nav2">
+                <ul class="navigation">
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="items.html">Products</a></li>
+                    <li><a href="new.html">What's New</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
         </section>
     </body>
 </html>
