Trying different designs

--- a/items.html
+++ b/items.html
@@ -18,13 +18,19 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </header>
-            <div class="nav2">
-                <ul class="navigation">
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="items.html">Products</a></li>
-                    <li><a href="new.html">What's New</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
+            <div class="container">
+                <div class="row">
+                    <h2>Row 1</h2>
+                    <p>This is the first row.</p>
+                </div>
+                <div class="row">
+                    <h2>Row 2</h2>
+                    <p>This is the second row.</p>
+                </div>
+                <div class="row">
+                    <h2>Row 3</h2>
+                    <p>This is the third row.</p>
+                </div>
             </div>
         </section>
     </body>
