--- a/items.html
+++ b/items.html
@@ -2,8 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Coca Cola - Home</title>
-        <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+
+        <link rel="stylesheet" content="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+
         <link rel="stylesheet" href="items.css">
     </head>
     <body>
@@ -18,6 +22,73 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </header>
+            <div class="container">
+                <h3 class="title">Beverage</h3>
+
+                <div class="products-container">
+
+                    <div class="product" data-name="p-1">
+                        <img src="images/pran1.png" alt="">
+                        <h3>...</h3>
+                        <div class="price">$2.00</div>
+                    </div>
+
+                    <div class="product" data-name="p-2">
+                        <img src="images/pran2.png" alt="">
+                        <h3>...</h3>
+                        <div class="price">$2.00</div>
+                    </div>
+
+                    <div class="product" data-name="p-3">
+                        <img src="images/pran3.png" alt="">
+                        <h3>...</h3>
+                        <div class="price">$2.00</div>
+                    </div>
+
+                    <div class="product" data-name="p-4">
+                        <img src="images/pran4.png" alt="">
+                        <h3>...</h3>
+                        <div class="price">$2.00</div>
+                    </div>
+
+                    <div class="product" data-name="p-5">
+                        <img src="images/pran5.png" alt="">
+                        <h3>...</h3>
+                        <div class="price">$2.00</div>
+                    </div>
+
+                    <div class="product" data-name="p-6">
+                        <img src="images/pran6.png" alt="">
+                        <h3>...</h3>
+                        <div class="price">$2.00</div>
+                    </div>
+
+                    <div class="product" data-name="p-7">
+                        <img src="images/pran7.png" alt="">
+                        <h3>...</h3>
+                        <div class="price">$2.00</div>
+                    </div>
+
+                    <div class="product" data-name="p-8">
+                        <img src="images/pran8.png" alt="">
+                        <h3>...</h3>
+                        <div class="price">$2.00</div>
+                    </div>
+
+                    <div class="product" data-name="p-9">
+                        <img src="images/pran9.png" alt="">
+                        <h3>...</h3>
+                        <div class="price">$2.00</div>
+                    </div>
+
+                    <div class="product" data-name="p-10">
+                        <img src="images/pran10.png" alt="">
+                        <h3>...</h3>
+                        <div class="price">$2.00</div>
+                    </div>
+
+                </div>
+            </div>
             
         </section>
     </body>
